--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bShowAllPlayerWidgetsWhenSplitscreenDisabled=False
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Script/First.MyGameInstance
 GameDefaultMap=/Game/Level/Loby.Loby
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/System/B_MyGameModeBase.B_MyGameModeBase_C
