--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -89,6 +89,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="Skill",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="MouseMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F1)
++ActionMappings=(ActionName="MouseMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +AxisMappings=(AxisName="MoveForWard",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForWard",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
