인벤토리 기능 90% 완성
-인벤토리 내 우클릭 시 UI 옵션
장비템은 미구현 확률이 높으므로 보류 및 버리기
소비템은 퀵슬롯등록 및 해제 및 버리기
비소비템은 버리기

-퀵슬롯에 등록된 아이템을 키보드로 사용 가능
1~5번키를 눌러서 사용 가능

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bShowAllPlayerWidgetsWhenSplitscreenDisabled=False
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/First.MyGameInstance
 GameDefaultMap=/Game/Level/TestRoom.TestRoom
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+ServerDefaultMap=None
 GlobalDefaultGameMode=/Game/System/B_MyGameModeBase.B_MyGameModeBase_C
 GlobalDefaultServerGameMode=None
 
